force-app/main/default/objects/Transaction_Termination__b/Transaction_Termination__b.object-meta.xml
<CustomObject>
    <indexes>
        <fullName>Base_Index</fullName>
        <fields>
            <name>Subscription__c</name>
            <sortDirection>ASC</sortDirection>
        </fields>
        <fields>
            <name>SFID__c</name>
            <sortDirection>ASC</sortDirection>
        </fields>
        <label>Base Index</label>
    </indexes>
    <label>Transaction Termination</label>
    <pluralLabel>Transaction Terminations</pluralLabel>
</CustomObject>