force-app/main/default/objects/Transaction_Termination__b/fields/Account__c.field-meta.xml
<CustomField>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <length>18</length>
        <type>Text</type>
    </CustomField>