force-app/main/default/objects/Transaction_Termination__b/fields/Case__c.field-meta.xml
<CustomField>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <length>18</length>
        <type>Text</type>
    </CustomField>