force-app/main/default/objects/Transaction_Termination__b/fields/Category__c.field-meta.xml
<CustomField>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>25</length>
        <type>Text</type>
    </CustomField>