force-app/main/default/objects/Transaction_Termination__b/fields/Expire_Balance__c.field-meta.xml
<CustomField>
        <fullName>Expire_Balance__c</fullName>
        <label>Expire Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </CustomField>