force-app/main/default/objects/Transaction_Termination__b/fields/Prior_Sunday__c.field-meta.xml
<CustomField>
        <fullName>Prior_Sunday__c</fullName>
        <label>Prior Sunday</label>
        <type>DateTime</type>
    </CustomField>