force-app/main/default/objects/Transaction_Termination__b/fields/Promo_Source__c.field-meta.xml
<CustomField>
        <fullName>Promo_Source__c</fullName>
        <label>Promo Source</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>