force-app/main/default/objects/Transaction_Termination__b/fields/Solicitor__c.field-meta.xml
<CustomField>
        <fullName>Solicitor__c</fullName>
        <label>Solicitor</label>
        <length>150</length>
        <type>Text</type>
    </CustomField>