force-app/main/default/objects/Transaction_Termination__b/fields/Solicitor_Org__c.field-meta.xml
<CustomField>
        <fullName>Solicitor_Org__c</fullName>
        <label>Solicitor Org</label>
        <length>150</length>
        <type>Text</type>
    </CustomField>